--- a/src/pinfo.html
+++ b/src/pinfo.html
@@ -13,14 +13,19 @@
   <div class="row">
     <h3>pinfo</h3>
   </div>
-  <div class "row">
+  <div class="row">
     <div class="col-md-8" id="photo-frame-box">
-      <canvas id="photo-frame" width="500">
+      <canvas id="photo-frame" width="500" height="500">
         canvas not supported
       </canvas>
     </div>
     <div class="col-md-4">
       sidebar/info
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6" id="dropzone">
+      <em>drag an image here</em>
     </div>
   </div>
 </div>
