--- a/src/pinfo.html
+++ b/src/pinfo.html
@@ -10,24 +10,38 @@
 <body>
 
 <div class="container">
-  <div class="row">
+  <div class="row" id="title-row">
     <h3>pinfo</h3>
   </div>
-  <div class="row">
-    <div class="col-md-8" id="photo-frame-box">
-      <canvas id="photo-frame" width="500" height="500">
-        canvas not supported
-      </canvas>
+
+  <div class="row" id="info-row">
+    <div class="col-sm-8">
+        <em>
+          <strong>
+            <p id="filename">no file loaded</p>
+          </strong>
+        </em>
+      <p>
+        <span id="filetype"></span>
+        <span id="filesize"></span>
+      </p>
     </div>
-    <div class="col-md-4">
-      sidebar/info
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6" id="dropzone">
+    <div class="col-sm-4" id="dropzone">
       <em>drag an image here</em>
     </div>
   </div>
+
+  <div class="row" id="data-row">
+    <div class="col-sm-8" id="photo-frame-box">
+      <canvas id="photo-frame" width="300" height="300">
+        canvas not supported
+      </canvas>
+    </div>
+    <div class="col-sm-4">
+      sidebar/info
+    </div>
+  </div>
+
 </div>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
