Obtain and preprocess image data

--- a/src/pinfo.html
+++ b/src/pinfo.html
@@ -37,8 +37,7 @@
         canvas not supported
       </canvas>
     </div>
-    <div class="col-sm-4">
-      sidebar/info
+    <div class="col-sm-4" id="photo-info">
     </div>
   </div>
 
