Working histogram plots based on D3 examples
Filled with randomly-generated data for now

--- a/src/pinfo.html
+++ b/src/pinfo.html
@@ -37,7 +37,13 @@
         canvas not supported
       </canvas>
     </div>
-    <div class="col-sm-4" id="photo-info">
+    <div class="col-sm-4" id="photo-info-box">
+        <div class="hist-box" id="photo-info-red">
+        </div>
+        <div class="hist-box" id="photo-info-green">
+        </div>
+        <div class="hist-box" id="photo-info-blue">
+        </div>
     </div>
   </div>
 
