Adds a mouseover pixel infobox
Uses d3-select and canvas element to display pixel data about
the pixel currently under the mouse pointer. Changes div
background color to match pixel color (converted from RGB).

--- a/src/pinfo.html
+++ b/src/pinfo.html
@@ -16,15 +16,21 @@
 
   <div class="row" id="info-row">
     <div class="col-sm-8">
-        <em>
-          <strong>
-            <p id="filename">no file loaded</p>
-          </strong>
-        </em>
-      <p>
-        <span id="filetype"></span>
-        <span id="filesize"></span>
-      </p>
+        <div class="row">
+          <div class="col-sm-4">
+            <em>
+              <strong>
+                <p id="filename">no file loaded</p>
+              </strong>
+            </em>
+            <p>
+              <span id="filetype"></span>
+              <span id="filesize"></span>
+            </p>
+          </div>
+          <div class="col-sm-6" id="mouse-position"></div>
+          <div class="col-sm-2" id="sat-box"></div>
+      </div>
     </div>
     <div class="col-sm-4" id="dropzone">
       <em>drag an image here</em>
